force-app/main/default/objects/Course__c/fields/Mob_Number__c.field-meta.xml
<CustomField>
    <fullName>Mob_Number__c</fullName>
    <label>Mob Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>