force-app/main/default/objects/Course__c/validationRules/Student_Fee.validationRule-meta.xml
<ValidationRule>
    <fullName>Student_Fee</fullName>
    <active>true</active>
    <errorConditionFormula>Fee__c  = 25000</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>we charge the  student fee only twenty five thousand</errorMessage>
</ValidationRule>